--- a/src/index.scss
+++ b/src/index.scss
@@ -7,14 +7,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  --red: #990000;
+  --blue: #4cb9fa;
+  --green: #00a000;
+
+  --light-grey: #e3e3e3;
+  --grey: #e3e3e3;
+
   --bg-color: #f5f5f5;
   --btn-default-bg-color: #f3f3f3;
   --btn-default-bg-color-hover: #e3e3e3;
   --btn-default-color: #666;
-
-  --red: #990000;
-  --blue: #4cb9fa;
-  --green: #00a000;
 }
 
 html,
@@ -51,5 +54,20 @@ body {
       border-color: var(--btn-default-bg-color);
       background-color: var(--btn-default-bg-color-hover);
     }
+  }
+
+  .form-group {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
+    .input {
+      flex: 1;
+    }
+  }
+
+  .error {
+    color: var(--red);
+    font-size: 12px;
   }
 }
